# iris-tauri

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/layout/: Layout.tsx
src/pages/: ErrorPage.tsx  Home.tsx
src/routes/: routes.tsx
src/utils/: request.ts
